fix: fixed wrong positioning

--- a/src/App/Main/styles.module.css
+++ b/src/App/Main/styles.module.css
@@ -24,6 +24,7 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 60px;
 }
 
 .button {
@@ -32,16 +33,13 @@ main {
   border-radius: 4px;
   color: #5f6368;
   height: 36px;
+  width: 125px;
   padding: 0 15px;
   cursor: pointer;
 }
 
 .button:nth-child(2) {
   margin-left: 20px;
-}
-
-.button:last-child {
-  margin-left: 15px;
 }
 
 .button:hover {
@@ -70,15 +68,29 @@ main {
   background-color: #f2f2f2;
   border-radius: 4px;
   border: none;
-  margin-left: 20px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.rectangle button {
+.iconButton {
   border: none;
+  align-self: flex-end;
+  font-size: xx-small;
+  color: #5f6368;
+}
+
+.iconButton:hover {
+  cursor: pointer;
+  background-color: #fff;
+  border-radius: 15px;
+}
+
+.randomNumber {
+  font-weight: 700;
+  display: flex;
+  align-self: center;
 }
 
 .green {
@@ -91,4 +103,9 @@ main {
 
 .red {
   color: red;
+}
+
+.buttonsColumn {
+  width: 120px;
+  padding: 0 15px;
 }
